Fix leak of nsMemoryImpl from ns4xPlugin::CreatePlugin.  b=56584  r=av@netscape.com  sr=waterson@netscape.com